public/stylesheet.css
/* Background CSS */

* {
  box-sizing: border-box;
}

li {
  list-style-type: none;
  /*Gets rid of bullet points on lists*/
}

a {
  text-decoration: none;
  /*gets rid of the underline under links*/
}


body {
  font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
  /*border: 30px #f5f5f5 solid;*/
  margin: 1px;
  /*background-image: url("wynavi.jpeg");*/
  /*border: 3px rgba(0, 255, 255, 0.5) solid;*/
  border: 2px rgb(51,51,51) solid;
  border-radius: 10px;
}



div.title-name {
  margin: 170px 0 100px 0;
  padding: 20px;
  text-align: center;
  height: 400px;
}
p.name {
  /*text-decoration: underline;
  -webkit-text-decoration-color: rgba(0, 255, 255, 0.2);*/
  font-weight: bold;
  font-size: 60px;
  text-transform: uppercase;
  letter-spacing: 0.05em;
  margin: 15px;
  color: rgb(51, 51, 51);
  font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
}
.contact-info {
  text-align: center;
  font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
  font-size: 20px;
  font-weight: 500;
  color: rbg(51,51,51);
}
 /*social media icons*/

 /* Style all font awesome icons */
 .fa {
   border-radius: 50%;
   margin-top: 35px;
   padding: 15px;
   font-size: 18px;
   width: 20px;
   height: 20px;
   text-align: center;
   text-decoration: none;
 }

 /* Add a hover effect */
 .fa:hover {
    color: #110089;
    text-decoration: none;
     /*opacity: 0.7;*/
 }

/*social icons list*/
.social-list {
  text-align: center;
  /*display: flex;
  justify-content: center;*/
  margin-top: none;
  padding-right: 48px;
}
.social-list > li {
  text-align: center;
  display: inline-block;
  padding-right: 25px;
  padding-left: 25px;
  font-size: 30px;
}
.social-list > li > a {
  text-align: center;
  color: black;
}
div.fa-angle-down {
  padding-right: 40px;
  font-size: 50px;
  text-align: center;
  /*width: 100%;
  display: flex;
  justify-content: center;*/
}



.language-div {
  height: 700px;
  /*background: -webkit-linear-gradient(white, rgba(210, 210, 210,0.5),rgba(210, 210, 210,0.5), rgba(210, 210, 210,0.5), white);*/
  padding-top: 50px;
  /*padding-bottom: 110px;*/
}
      .container-right, .container-left {
      }
      .container-right {
        height: 500px;
        width: 50%;
        float: right;
      }
          .frontend-div, .backend-div {
            /*border: 2px purple solid;*/
            display: flex;
            align-items: center;
            justify-content: center;
            flex-wrap: wrap;
            height: 50%;
            padding: 40px 30px 0 0;
          }
      .container-left {
        height: 500px;
        width: 50%;
        float: left;
      }
          .frontend-text-div, .backend-text-div {
            /*border: 2px green solid;*/
            color: rgb(51,51,51);
            font-weight: bold;
            font-size: 48px;
            display: flex;
            align-items: center;
            justify-content: center;
            flex-direction: column;
            height: 250px;
            /*margin: 40px 0 70px 0;*/
            padding: 0 0 0 30px;
          }
            div.frontgradient-line, .backgradient-line {
              height: 2px;
              width: 100%;
              background: -webkit-linear-gradient(left top, #1700B2,rgba(0, 255, 255, 0.7),white);
              margin-bottom: 5px;
            }
            .front-text, .back-text {
              display: flex;
              flex-wrap: wrap;
              width: 490px;
              margin-top: 40px;
            }
            .front-text2, .back-text2 {
              font-weight: 400;
              font-size: 20px
            }

.frontend-badge, .backend-badge {
  margin: 40px 0 0 30px;
}



span#projects {
  height: 80px;
  padding: 10px 0 10px 0;
  margin: 10px 0 30px 0;
  font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
  font-size: 60px !important;
  font-weight: bold;
  color: #f5f5f5 !important;
  display: flex;
  align-items: center;
  justify-content: center;
}
/*TABS*/
.project-div {
  height: 850px;
  /*background: -webkit-linear-gradient(top, #f5f5f5, white);*/
  padding-top: 50px;
  border-radius: 10px;
  /*border-top: 2px #f5f5f5 solid;*/
  /*margin-bottom: 160px;*/
  /*margin-top: 100px;*/
  background: -webkit-linear-gradient(top, white, white, #f5f5f5);
}

.active#dockit a {
  background-color: white !important;
  border-bottom: 2px rgba(0, 255, 255, 0.7) solid;
}

#exTab3 .nav-pills#nav-pills-development {
  display: flex !important;
  justify-content: center !important;
}
#exTab3 .nav-pills > li > a {
  /*background: -webkit-linear-gradient(top, #f5f5f5, white);*/
  border-radius: 4px 4px 0 0 ;
  color: rgb(51, 51, 51);
  font-weight: bolder;
  font-size: 35px;
  font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif !important;
  text-align: center;
}
div#exTab3.container {
  background-color: white;
  border-radius: 10px;
}

span#tag-line {
  font-size: 22px;
  font-weight: 600;
  color: rgb(51, 51, 51);
}
span#tools {
color: rgba(51, 51, 51, 0.8);
font-size: 15px;
}
p.tab-content {
  /*border-left: 2px rgba(0, 255, 255, 1) solid;*/
  font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif !important;
  font-weight: 500;
  font-size: 20px;
  padding-top: 10px;
  color: rgba(51, 51, 51, 0.95);
}

.video-div {
  display: flex;
  justify-content: center;
}

video.dockit-video {
  width: 100%;
  text-align: center;
}




.dockit {
  font-size: 80px;
}

.bio .dockit {
  color: #3c00d2;
}
.post:hover {
  color: #336791;
}
.boot:hover {
  color: #401F7C;
}
.html:hover {
  color: #FF4500;
}
.css:hover {
 color: #00a4e4;
}
.js:hover {
  color: #FFD700;
}
.eventbrite:hover {
  color: #ff9a00;
}
.ticketmaster:hover {
  color: #009cde;
}
.ruby:hover {
  color: 	rgba(155, 17, 30, 1.0);
}
.jquery:hover {
  color: rgba(122, 206, 244, 1);
}
.github {
  color: black;
}
.github:hover {
  color: #f5f5f5
}

footer {
  background: -webkit-linear-gradient(top, #f5f5f5, #f5f5f5, rgba(51,51,51,0.1));
  height: 600px;
  padding: 30px;
  border-radius: 10px;
  border: 2px purple solid;
}
.wrapper {
  width: 100%;
  display: table;
  border: 2px red solid;
}
.equal {
  display: table-cell;
  border: 2px green solid;
}
.left {
  text-align:left;
  border: 1px blue solid;
  height: 460px;
  width: 50%
}
.right {
  text-align:right;
  border: 1px blue solid;
  height: 460px;
  width: 50%;
}



@media only screen and (mid-width: 768px){
    /*events*/
    body, div {
        display: flex;
    }

}

